chore: display participant count in public courses page, update trip-related copy

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5262,13 +5262,9 @@
   "languages": "Languages",
   "chooseLanguage": "Choose a language.",
   "letsGo": "Let's go",
-  "startOwnTrip": "Start my own",
+  "startOwn": "Start my own",
   "joinCourseDesc": "Each course has 8-10 sequenced topics with a range of task-based language learning activities.",
-  "unlockPrivateTripTitle": "Unlock private trip",
-  "browsePublicTrips": "Browse public trips",
-  "courseCode": "What’s the secret password?",
-  "courseCodeHint": "Trip code or link",
-  "unlockMyTrip": "Unlock my trip",
+  "courseCodeHint": "Course code",
   "anyLevel": "Any Level",
   "signupOption": "How do you want to sign up?",
   "withApple": "With Apple",
