--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5303,5 +5303,6 @@
   },
   "addCourse": "Add a course",
   "joinCourseWithCode": "Join course with code",
-  "joinPublicCourse": "Join public course"
+  "joinPublicCourse": "Join public course",
+  "vocabLevelsDesc": "This is where vocab words will go once you’ve leveled them up!"
 }
