chore: add tooltip to describe vocab highlighting in activity dropdown menu

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5304,5 +5304,6 @@
   "addCourse": "Add a course",
   "joinCourseWithCode": "Join course with code",
   "joinPublicCourse": "Join public course",
-  "vocabLevelsDesc": "This is where vocab words will go once you’ve leveled them up!"
+  "vocabLevelsDesc": "This is where vocab words will go once you’ve leveled them up!",
+  "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat"
 }
